--- a/src/components/BehaviorsCard/BehaviorsCard.css
+++ b/src/components/BehaviorsCard/BehaviorsCard.css
@@ -9,6 +9,8 @@
   border-radius: 15px;
   cursor: pointer;
   transition: 0.3s;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .behav-icon:hover,
@@ -26,4 +28,8 @@
 
 .behav-img {
   padding-left: 15px;
+}
+
+.behav-icon.fade-in {
+  opacity: 1;
 }
